--- a/students/k3339/laboratory_works/Tsyrulnikov_Artem/docs/mkdocs.yml
+++ b/students/k3339/laboratory_works/Tsyrulnikov_Artem/docs/mkdocs.yml
@@ -5,6 +5,7 @@ docs_dir: pages
 nav:
   - Главная: index.md
   - Лабораторная работа 1: lab1.md
+  - Лабораторная работа 2: lab2.md
 
 theme:
   name: material
